@@ -4,21 +4,23 @@ Hash: SHA512
 AUX squeezeslave-1.1_p309-ffmpeg.patch 2350 RMD160 e1cb0cb7bb063aef888553b596d4c3f60b275528 SHA1 2c3c515ff36e0e269e0ed192b1689c4d90dc76d9 SHA256 af549c37f452ff653a05aaaf6ea0be7c069e606ac419eb06d6f96c7f35febd00
 AUX squeezeslave-1.1_p350-tremor-headers.patch 666 RMD160 0c17f45ccc7629f1ac30d1c685b3358bc0ba678e SHA1 60d5bdb82a54281d22747b5a6b1e93c4ed3c263c SHA256 00089edfbc89c83520af08875a11681b855e9365cfbf860b9467f81818231631
 AUX squeezeslave.confd 317 RMD160 23217760c20d12a19ea2d446a77cf045a8e1edec SHA1 8046774d6ec3ad8f924234a9f683289d99f0dbeb SHA256 bc73638b70b736f3b1934871db3a348254f207ce42a03ac26dff6e273192a7c2
+AUX squeezeslave.confd-r1 320 RMD160 bd7cd18d4de8e315cc667d7383bd30c01c89eb66 SHA1 d7e89953c17f7a6c155b2b4a2525386ba4a9da3e SHA256 17529183d90dff3c212e52de02a39565f9cf31e8a17e74f17f73f9c7fce54b59
 AUX squeezeslave.initd 508 RMD160 7a2bb454ca3c26c1e98f4df4b0b5f0527793fcc1 SHA1 39564b19e4232b966b2677faf8fe7bc18b907c74 SHA256 bf77e77c8aad105119914e1463506ccb49dd96822cb7f2eb74f89e704c27963b
+AUX squeezeslave.initd-r1 514 RMD160 8f6011f598785f81d076ef4e2ae5a9c698738b34 SHA1 8c8711f6da876dc7ccfece5327b44d6659ebcc1e SHA256 4f13200020aa33e3c85f76655e4c5ad8102533b49d9ac5a70b2059c169609b91
 DIST squeezeslave-1.1_p312.tar.xz 116240 RMD160 e71a595c5df038fc441b375f6fd241315c1aff86 SHA1 763ddfac891de8fbec7b78a3ddb19f29eedd25ad SHA256 847db3efb5ab17c964ca8191c2d0ef3e1a399d2615fed12acfcf5de222c56020
 DIST squeezeslave-1.1_p350.tar.xz 119936 RMD160 cf56ea44491905328a033028f1d9dc28edd817c6 SHA1 3a389e9e12d43a67b62f93b8c6accbb65f338bdc SHA256 873ccdabd07aaa77f1e282ca8be77ddcacfd27de43c9b74d2c12e9787d5c35fb
 EBUILD squeezeslave-1.1_p312.ebuild 1120 RMD160 b2f3e389e70814d86ee3973486103bdddd2e80c4 SHA1 6cdd2fed05fffb6f513ae38bbd778e3249d3d4cb SHA256 cd4741f33dbaf81d27b7aa09f2c51f80d297be0e531c493e0c3bf8ec41c9f8d5
-EBUILD squeezeslave-1.1_p350.ebuild 1215 RMD160 158dee0ad6a109c1d65dd9e3327bb96905bd21fc SHA1 625a55d7a369d460a7646a3a828d4751d5350e35 SHA256 ee5027a673a32fec318a4ba45b7c7b0108762c6173c83d5261cd52f72864ac09
-MISC ChangeLog 1703 RMD160 f762e2fb7b5b93588e1c12be85220db4b7ad3be6 SHA1 40fa759e9b9a4b0bd5877816bfdfd42a8271338b SHA256 bbb3407a50bbfa7e12c137661d0e0f4ab71c10dba951e163fb166e06746c488b
+EBUILD squeezeslave-1.1_p350.ebuild 1221 RMD160 759d938b5112e2644ad0e50d3d28464b50a2125a SHA1 697a5944b0c7418570951af0f0995f1176dfce7f SHA256 326737d12f7cfac0d3098572fcd8e2b1bee06d80c3b22a458c8c83c9ec100693
+MISC ChangeLog 1931 RMD160 449f77a0c6f0a596c12bce92e0dd000dfa003b14 SHA1 76a0a62910a3e3d78482ba3ff365989b2e7e8e3b SHA256 fcec208a8a567d332ff934b90b06be8c9d0bd6595e2b1a0663fd0beb1c46c535
 MISC metadata.xml 599 RMD160 b84512ca023b14bb9f2a30da710f3f7d862b0777 SHA1 d48fbcd135832fa880ab04a8dddca9cf4e0854c8 SHA256 9d70b57adb9ee4c6f62d11188c0f2c35735f936725f7925ce4afb0e39df2d34e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJP7tncAAoJEEqz6FtPBkyjTbcH/155/+CIPssMIoIszFkM7/R5
-C1srqIfdg/6SpsNEWGmhN8UGaJP8L90c81BeDssTHZGTtn69wM5jo9vHWy9R1kXA
-ddH9PrJufuEE/8o6bW9fjORrQhPbk23KY0OSCLevGNfGeNSu2D1VHY2zMRuLpXxt
-yYHILziwFgkYp3jP4EuG9AqtYNdDe4y9MgGILmoGirTfHSIliM3ZshfFaW+Eyfpl
-wzQ5dBO8ft5X+Jzol/l5GeZ/8QcfhkjEtDDyBSyuULKdxO5HAEywbkV4oezM9s5v
-e16reEYJ6kQYhYb6jvBI0dpxL1kAM6doU6BwQR5r29HDw4imAF0WknAn+XmtM3I=
-=mEVN
+iQEcBAEBCgAGBQJP7txKAAoJEEqz6FtPBkyjnZkH/RRxMSbuXyScWDLmIlWpHgZq
+P6rRsoFRUNqQidZVA5l16sc+9zu8VXZ2/s6g9SOhlEAPPpUcBmyOHcQGz+AjaF9W
+/FaeIXoZ4XwCvkv+q6ieg4NAnBmzcmNPZ4iErsNXAUfGUuRNwAva6B6Z9Q1FDH4h
+mLypp7uRsfueDd/fDvjvkyECHJFdVz/OFYM8zf7sA4gu4+amFDtEEr01VSxgK55Q
+61ySV71yB7GMc8eUeqFL+0bP3ac9Mj5mYUwxqroAIcx0BBLLOgwhc1jNIMFqhyrG
++C7cTaZzZ1eeTQ6O78We0rsQhaTFYtOLwiUnfBqQkHtncIyVe9epdrZhd1Do/84=
+=vHvD
 -----END PGP SIGNATURE-----
