@@ -1,0 +1,13 @@
+# /etc/conf.d/squeezeslave: config file for /etc/init.d/squeezeslave
+
+# Log file for squeezeslave
+SS_LOG="/var/log/squeezeslave.log"
+
+# MAC address associated with this instance
+SS_MAC="00:00:00:00:00:01"
+
+# IP address of machine running logitechmediaserver
+LMS_HOST="127.0.0.1"
+
+# Other squeezeslave options
+SS_OPTS=""
