@@ -1,0 +1,14 @@
+#!/sbin/runscript
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezeslave/files/squeezeslave.initd-r1,v 1.1 2012/06/30 11:00:21 radhermit Exp $
+
+command="/usr/bin/${SVCNAME}"
+command_args="--daemonize ${SS_LOG} --mac ${SS_MAC} --retry ${LMS_HOST} ${SS_OPTS}"
+pidfile="/var/run/${SVCNAME}.pid"
+start_stop_daemon_args="--background --quiet --make-pidfile"
+
+depend() {
+	need net
+	use logitechmediaserver
+}
