@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/squeezeslave
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezeslave/ChangeLog,v 1.9 2012/06/30 10:49:55 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezeslave/ChangeLog,v 1.10 2012/06/30 11:00:21 radhermit Exp $
+
+  30 Jun 2012; Tim Harder <radhermit@gentoo.org> squeezeslave-1.1_p350.ebuild,
+  +files/squeezeslave.confd-r1, +files/squeezeslave.initd-r1:
+  Update init script to change squeezeboxserver references to
+  logitechmediaserver.
 
 *squeezeslave-1.1_p350 (30 Jun 2012)
 
